--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@ h2{
 /* Scroll Bar ----------------------------------------- */
 
 ::-webkit-scrollbar {
-  width: 0px; 
+  width: 3px; 
   padding: 0;
   margin: 0;
 }
@@ -93,7 +93,7 @@ h2{
 
 /*****  Main   ***/
 .main{
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   gap: 100px;
 }
 
@@ -102,8 +102,9 @@ section{
 }
 
 .hero{
-  height: 90vh;
-  min-height: 500px;
+  height: 600px;
+  /* padding-top: 100px; */
+  /* min-height: 500px; */
 
 }
 .description{
@@ -115,31 +116,59 @@ section{
   width: 400px;
   height: 400px;
   object-fit: cover;
+  border: 1px solid var(--foreground-color);
 }
 
 
 /****** Skills ***/
 
-.skill, .tech{
-  width: 30%;
+.r-card{
+  width: 28%;
   display: flex; 
   flex-direction: column;
   gap: 4px;
   padding: 10px 15px;
   border: 1px solid var(--foreground-color);
-  /* border-radius: 4px;  */
+  border-radius: 2px; 
+
+  height: 330px;
+  overflow-y: scroll;
 }
-.skill ul, .tech ul{
-  display: flex; 
-  flex-direction: column;
-  gap: 2px;
+
+
+.r-card::-webkit-scrollbar {
+  width: 1px; 
 }
-.skill h4, .tech h4{
+
+.r-card h4{
   font-size: 1.2rem;
   font-weight: 500;
+  margin-bottom: 2px;
+  border-bottom: 1px solid #ccc;
 }
+.r-card ul{
+  display: flex; 
+  flex-direction: column;
+  gap: 3px;
+  padding-top: 7px;
+  font-weight: 500;
+}
+
+.tech li {
+  display: flex;
+  justify-content: start;
+  gap: 4px;
+}
+
+
+.s-tech{
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--foreground-color);
+}
+
 li.purple{
-  color: purple;
+  color: rgb(129, 8, 129);
 }
 li.blue{
   color: blue;
@@ -148,7 +177,7 @@ li.gray{
   color: gray;
 }
 
-.tech.w-100{
+.w-100{
   width: 100%;
 }
 
