--- a/app/globals.css
+++ b/app/globals.css
@@ -102,19 +102,28 @@ section{
 }
 
 .hero{
-  height: 600px;
-  /* padding-top: 100px; */
-  /* min-height: 500px; */
-
+  height: 500px;
+  padding-top: 100px;
+  padding-bottom: 0;
 }
 .description{
   height: 100%;
 }
+.description{
+  margin-left: 40px;
+  padding-left: 4px;
+  border-left: 1px solid #ccc;
+}
+.picture{
+  margin-right: 40px;
+  padding-right: 4px;
+  border-right: 1px solid #ccc
+}
 
 .picture img{
-  border-radius: 400px;
-  width: 400px;
-  height: 400px;
+  border-radius: 220px;
+  width: 380px;
+  height: 460px;
   object-fit: cover;
   border: 1px solid var(--foreground-color);
 }
@@ -154,10 +163,18 @@ section{
   font-weight: 500;
 }
 
+.tech{
+  height: 300px;
+}
 .tech li {
   display: flex;
   justify-content: start;
-  gap: 4px;
+  align-items: center;
+  gap: 5px;
+}
+.tech li img{
+  width: 35px;
+  height: 35px;
 }
 
 
@@ -189,7 +206,6 @@ li.gray{
   height: 300px;
   padding: 10px;
   border: 1px solid;
-  
 }
 
 .project-70{
@@ -227,4 +243,19 @@ li.gray{
   object-fit: cover;
   object-position: left;
   /* display: none; */
+}
+
+
+
+/******    Stack  *******/
+
+.stack{
+  display: flex;
+  justify-content: start;
+  gap: 20px;
+  min-width: 80%;
+  /* box-shadow: 0 0 4px rgb(13, 126, 231); */
+
+
+  margin-bottom: 200px;
 }
