--- a/app/about/about.css
+++ b/app/about/about.css
@@ -17,6 +17,9 @@ h2{
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   padding: 10px;
+  width: 95%;
+  max-width: 95%;
+  overflow: hidden;
 }
 
 .story-2{
