--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,7 @@ h2{
 
 .bborder{
   padding-right: var(--bborder-padding-x);
+  max-width: 1500px!important;
 }
 
 .bborder-top{
@@ -251,11 +252,62 @@ li.gray{
 
 .stack{
   display: flex;
+  justify-content: space-between;
+  gap: 60px;
+  overflow-x: scroll;
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.stack div{
+  display: flex;
   justify-content: start;
-  gap: 20px;
-  min-width: 80%;
-  /* box-shadow: 0 0 4px rgb(13, 126, 231); */
+  gap: 7px;
+  align-items: center;
+  font-family: serif;
+  font-size: 32px;
+  width: max-content;
+  /* min-width: 100px; */
+}
 
+.stack img{
+  width: auto;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 4px;
+  /* display: none; */
+}
 
-  margin-bottom: 200px;
+@media screen and (max-width: 1200px) {
+
+  .projects{
+    flex-direction: column;
+  }
+  .project{
+    width: 100%;
+  }
+
+  .project-30{
+    flex-direction: row;
+  }
+  .project-30 .project-img{
+    width: max-content;
+
+  }
+  
+}
+
+@media screen and (max-width: 900px) {
+
+  .project{
+    flex-direction: column;
+  }
+  .project-img{
+    max-width: 100%;
+  }
+  .project-img video{
+    width: 100%!important;
+    height: auto;
+  }
+
 }
