--- a/app/navigation/navigation.css
+++ b/app/navigation/navigation.css
@@ -105,12 +105,22 @@
 
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 924px) {
 
-  nav {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+
+  .navbar{
+    border-bottom: 1px solid #ccc;
+  }
+
+  .desktopp, .desktop-menu, .hire-me {
+    display: none;
+  }
+
+  .footer{
+    flex-direction: column;
+  }
+  .socials{
+    /* flex-direction: column; */
   }
 
   .menu-icons {
@@ -143,20 +153,15 @@
     transform: rotate(45deg) translate(-3px, -3px);
   }
 
-  .desktop {
-    display: none;
-  }
-
-
   .mobile-menu {
     position: absolute;
-    top: 65px;
+    top: 48px;
     left: 0;
     right: 0;
     width: 100%;
     height: max-content;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 40px 1rem 110px 1rem;
     display: flex;
     flex-direction: column;
     gap: 35px;
@@ -166,13 +171,10 @@
   .mobile-menu .navlinks {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
     gap: 4vh;
     width: 80%;
     margin: 0 auto;
-    /* position: absolute;
-    top: 40px;
-    left: 0;
-    right: 0; */
   }
 
   .mobile-menu .theme {
@@ -198,6 +200,15 @@
     gap: 20 px;
     z-index: -1;
     transition: all .7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .m-hire{
+    display: flex;
+    position: absolute;
+    height: 32px;
+    top: 360px;
+    left: 58px;
+    bottom: 0;
   }
 
 }
