--- a/app/about/about.css
+++ b/app/about/about.css
@@ -30,7 +30,7 @@ h2 {
 
 .story-3{
   width: 95%;
-  max-width: 700px;
+  max-width: 1000px;
   overflow: hidden!important;
 }
 
@@ -68,6 +68,9 @@ h2 {
   /* display: none; */
 } 
 
+.willAnime{
+  
+}
 
 
 @media screen and (max-width: 1100px) {
