--- a/app/globals.css
+++ b/app/globals.css
@@ -101,17 +101,29 @@ h2 {
 
 /* **************   ENVIRONMENT   ********************* */
 
+.bbordered{
+  border-left: .5px solid;
+  width: max-content;
+  margin: 0 auto;
+  position: relative;
+}
+
 .env{
   position: fixed;
-  bottom: calc(var(--bborder-padding-y) * 2);
-  left: calc(var(--bborder-padding-x) / 6);
+  bottom: calc(var(--bborder-padding-y) );
   width: 20px;
   display: flex; 
+  /* display: none;  */
   flex-direction: column-reverse;
   padding: 0;
   gap: 130px;
   font-size: 14px;
   /* border: solid green; */
+}
+
+.inner-left{
+  left: calc(var(--bborder-padding-x) / 6)!important;
+  bottom: calc(var(--bborder-padding-y) *2)!important;
 }
 
 .theme, .language {
@@ -135,6 +147,7 @@ h2 {
   width: 10px;
   height: 10px;
   border: 1px solid;
+  cursor: pointer;
 }
 .checkbox.active{
   background-color: black;
@@ -312,6 +325,11 @@ li.gray {
   object-fit: cover;
   object-position: left;
   /* display: none; */
+}
+
+
+#shadow-host-companion{
+  padding: 0;
 }
 
 @media screen and (min-width: 1200px){
