--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,7 @@ h2 {
 .bborder-bottom {
   min-width: calc(100% + var(--bborder-padding-x));
   min-height: var(--bborder-padding-y);
-  background-color: white;
+  background-color: var(--background-color);
   padding-bottom: var(--bborder-padding-y);
   border-top: var(--bborder-width) solid var(--foreground-color);
   overflow: hidden;
@@ -150,7 +150,7 @@ h2 {
   cursor: pointer;
 }
 .checkbox.active{
-  background-color: black;
+  background-color: var(--foreground-color);
 }
 
 
@@ -313,7 +313,7 @@ li.gray {
 .project-img {
   height: 100%;
   overflow: hidden;
-  /* border:  2px solid black; */
+  /* border:  2px solid var(--foreground-color); */
   box-shadow: 0 0 4px #00000055;
   border-radius: 4px;
 }
@@ -382,7 +382,7 @@ li.gray {
   .bborder-top::before {
     position: fixed;
     width: 150px;
-    border-top: 5px solid black;
+    border-top: 5px solid var(--foreground-color);
   }
 
   .main {
